--- a/client/components/ticketComponents/ticketComponents.html
+++ b/client/components/ticketComponents/ticketComponents.html
@@ -256,7 +256,10 @@
         <a href="/ticket/{{ticketNumber}}" name="ticketLink">Ticket #{{ticketNumber}}</a><br>
         <strong><a href="#" name="changeQueue">{{queueName}}</a></strong><br>
         {{>timestampFormatter date=submittedTimestamp}}<br>
-        ({{>timeFromNow date=submittedTimestamp}})
+        ({{>timeFromNow date=submittedTimestamp}})<br>
+        {{#if submittedByOther}}
+          Submitted by: {{> userPortrait userId=submittedByUserId class="in-row"}} {{usernameFromId submittedByUserId}}
+        {{/if}}
       </div>
     </div>
   </div>
