Kanban initial implementation

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -65,7 +65,7 @@
     <div class="hidden-sm hidden-md hidden-lg">
       {{> mobileFilter data=tickets}}
     </div>
-    {{> Template.dynamic template='ticketTable'}}
+    {{> Template.dynamic template=ticketTemplate}}
   </div>
   <div class="hidden-xs col-sm-2">
     {{> sidebar data=tickets}}
