Sidebar collapse icons should trigger collapse event

--- a/client/app.css
+++ b/client/app.css
@@ -510,6 +510,10 @@ blockquote {
   word-wrap: break-word;
 }
 
+.panel-title .collapse-icon {
+  padding-right: 5px;
+}
+
 .error {
   font-weight: bold;
   color: red;
