--- a/client/views/queue/components/sidebar/sidebar.html
+++ b/client/views/queue/components/sidebar/sidebar.html
@@ -29,7 +29,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <span name="statusCollapse" class="glyphicon glyphicon-chevron-down"></span> <a data-toggle="collapse" href='#statusCollapse'>Status</a>
+      <a data-toggle="collapse" href="#statusCollapse"><span name="statusCollapse" class="glyphicon glyphicon-chevron-down collapse-icon"></span>Status</a>
     </h4>
   </div>
   <div id="statusCollapse" class="panel-collapse collapse in">
@@ -63,7 +63,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <span name="tagCollapse" class="glyphicon glyphicon-chevron-down"></span> <a data-toggle="collapse" href='#tagCollapse'>Tag</a>
+      <a data-toggle="collapse" href="#tagCollapse"><span name="tagCollapse" class="glyphicon glyphicon-chevron-down collapse-icon"></span>Tag</a>
     </h4>
   </div>
   <div id="tagCollapse" class="panel-collapse collapse in">
@@ -88,7 +88,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h4 class="panel-title">
-      <span name="userCollapse" class="glyphicon glyphicon-chevron-down"></span><a data-toggle="collapse" href="#userCollapse">Associated User</a>
+      <a data-toggle="collapse" href="#userCollapse"><span name="userCollapse" class="glyphicon glyphicon-chevron-down collapse-icon"></span>Associated User</a>
     </h4>
   </div>
   <div id="userCollapse" class="panel-collapse collapse in">
