Add comment count to ticket cards.

--- a/client/views/queue/views/ticketKanban/ticketCard.html
+++ b/client/views/queue/views/ticketKanban/ticketCard.html
@@ -2,6 +2,7 @@
   <div class="ticket-card">
     <div class="ticket-card-header">
       <div class="ticket-card-header-title">
+        <span class="badge" title="{{noteCount}} notes">{{noteCount}}</span>
         {{title}}
       </div>
       {{> userPortrait userId=authorId class="submitter-portrait"}}
