--- a/client/components/modals/ticketModal/ticketModal.html
+++ b/client/components/modals/ticketModal/ticketModal.html
@@ -5,7 +5,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">{{linkify title}}</h4>
+            <h4 class="modal-title">{{markdown title}}</h4>
           </div>
           <div class="modal-body">
             <div class="row row-no-margin">
@@ -16,7 +16,7 @@
               <label for="body">Body:</label>
               <blockquote>
                 {{#each bodyParagraph}}
-                  <p>{{linkify this}}</p>
+                  <p>{{markdown this}}</p>
                 {{/each}}
               </blockquote>
             </div>
