--- a/client/components/ticketComponents/ticketComponents.html
+++ b/client/components/ticketComponents/ticketComponents.html
@@ -17,7 +17,7 @@
               {{#each arrayify formFields}}
                 <tr>
                   <td class="col-xs-2 col-md-2"><strong>{{name}}</strong></td>
-                  <td class="col-xs-10 col-md-10">{{linkify value}}</td>
+                  <td class="col-xs-10 col-md-10">{{markdown value}}</td>
                 </tr>
               {{/each}}
             </tbody>
@@ -55,64 +55,64 @@
       <div class="col-xs-8 col-md-10">
         <div class="well well-sm note-well {{internalNoteClass}}" style="text-align: left;">
           {{#each noteParagraph}}
-            <p>{{linkify this}}</p>
+            <p>{{markdown this}}</p>
           {{/each}}
           {{#if internal}}<span class="glyphicon glyphicon-lock pull-right" title="This note is only visible to queue members."></span>{{/if}}
         </div>
-        </div>
       </div>
-      {{else}}
-      <div class="row">
-        <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
+    </div>
+    {{else}}
+    <div class="row">
+      <div class="col-xs-8 col-xs-offset-4 col-md-10 col-md-offset-2">
+        {{#if changeIsType 'attachment'}}
+          {{#with otherId}}
+            {{#if file.thumbnail}}
+              <a class="cursor-pointer" data-action="showAttachmentModal" data-fileId="{{file._id}}">
+                <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
+              </a>
+            {{/if}}
+          {{/with}}
+        {{/if}}
+        <small style="font-size: 0.7em;">
           {{#if changeIsType 'attachment'}}
-            {{#with otherId}}
-              {{#if file.thumbnail}}
-                <a class="cursor-pointer" data-action="showAttachmentModal" data-fileId="{{file._id}}">
-                  <img class="img-thumbnail" style="max-width: 100%; max-height: 128px" src="/file/{{file.thumbnail}}"/><br/>
-                </a>
-              {{/if}}
-            {{/with}}
+            {{#if oldValue}}
+              User {{authorName}} removed attached file {{oldValue}}
+            {{/if}}
+            {{#if newValue}}
+              User {{authorName}} attached file {{newValue}}
+            {{/if}}
           {{/if}}
-          <small style="font-size: 0.7em;">
-            {{#if changeIsType 'attachment'}}
+          {{#if changeIsType 'field'}}
+            {{#if fieldIs 'queueName'}}
+              User {{authorName}} transferred ticket from {{oldValue}} to {{newValue}}
+            {{/if}}
+            {{#if fieldIs 'status'}}
+              User {{authorName}} changed status from {{oldValue}} to {{newValue}}
+            {{/if}}
+
+            {{#if fieldIs 'tags'}}
               {{#if oldValue}}
-                User {{authorName}} removed attached file {{oldValue}}
+                User {{authorName}} removed tag(s) {{oldValue}}
               {{/if}}
               {{#if newValue}}
-                User {{authorName}} attached file {{newValue}}
+                User {{authorName}} added tag(s) {{newValue}}
               {{/if}}
             {{/if}}
-            {{#if changeIsType 'field'}}
-              {{#if fieldIs 'queueName'}}
-                User {{authorName}} transferred ticket from {{oldValue}} to {{newValue}}
-              {{/if}}
-              {{#if fieldIs 'status'}}
-                User {{authorName}} changed status from {{oldValue}} to {{newValue}}
-              {{/if}}
 
-              {{#if fieldIs 'tags'}}
-                {{#if oldValue}}
-                  User {{authorName}} removed tag(s) {{oldValue}}
-                {{/if}}
-                {{#if newValue}}
-                  User {{authorName}} added tag(s) {{newValue}}
-                {{/if}}
+            {{#if fieldIs 'associatedUserIds'}}
+              {{#if oldValue}}
+                User {{authorName}} removed associated user(s) {{oldValue}}
               {{/if}}
-
-              {{#if fieldIs 'associatedUserIds'}}
-                {{#if oldValue}}
-                  User {{authorName}} removed associated user(s) {{oldValue}}
-                {{/if}}
-                {{#if newValue}}
-                  User {{authorName}} associated user(s) {{newValue}}
-                {{/if}}
+              {{#if newValue}}
+                User {{authorName}} associated user(s) {{newValue}}
               {{/if}}
             {{/if}}
-            @ {{timestamp}}
-          </small>
-        </div>
+          {{/if}}
+          @ {{timestamp}}
+        </small>
       </div>
-    {{/if}}
+    </div>
+  {{/if}}
 </template>
 
 <template name="ticketInfoPanels">
@@ -195,6 +195,14 @@
     </div>
   </div>
   <div class="row">
+    <div class="col-xs-12 col-md-10 col-md-offset-2">
+      <button class="btn btn-xs btn-link" data-action="showMarkdownHelp">Styling with Markdown is supported.</button>
+      {{#if showingMarkdownHelp}}
+        {{>markdownHelp}}
+      {{/if}}
+    </div>
+  </div>
+  <div class="row">
     <div class="note-input-buttons col-md-10 col-md-offset-2 col-xs-12">
       {{#if queueMember}}
         <div class="status-button pull-left">
@@ -230,14 +238,14 @@
 </template>
 
 <template name="ticketTag">
-<div class="tag">
-  <div class="tag-link">
-    <a href="#" data-action="addTagFilter">{{this}}</a>
+  <div class="tag">
+    <div class="tag-link">
+      <a href="#" data-action="addTagFilter">{{this}}</a>
+    </div>
+    <div class="remove-tag">
+      <a href="#" data-action="removeTag">Remove</a>
+    </div>
   </div>
-  <div class="remove-tag">
-    <a href="#" data-action="removeTag">Remove</a>
-  </div>
-</div>
 </template>
 
 <template name="ticketHeadingPanels">
@@ -290,4 +298,35 @@
       </div>
     </div>
   </div>
+</template>
+
+
+<template name="markdownHelp">
+  <table class="table table-condensed table-bordered">
+    <tbody>
+      <tr style="background-color: #ffff99; text-align: center">
+        <td><em>you type:</em></td>
+        <td><em>you see:</em></td>
+      </tr>
+      <tr>
+        <td>*italics*</td>
+        <td><em>italics</em></td>
+      </tr>
+      <tr>
+        <td>**bold**</td>
+        <td><b>bold</b></td>
+      </tr>
+      <tr>
+        <td>[google](http://www.google.com)</td>
+        <td><a href="http://www.google.com">google</a></td>
+      </tr>
+      <tr>
+        <td>* item 1<br>* item 2<br>* item 3</td>
+        <td><ul><li>item 1</li><li>item 2</li><li>item 3</li></ul></td>
+      </tr>
+      <tr><td>&gt; quoted text</td>
+        <td><blockquote>quoted text</blockquote></td>
+      </tr>
+    </tbody>
+  </table>
 </template>
