Make sure attachment download links are properly escaped.

--- a/client/components/modals/attachmentModal/attachmentModal.html
+++ b/client/components/modals/attachmentModal/attachmentModal.html
@@ -16,7 +16,7 @@
             {{/if}}
           </div>
           <div class="modal-footer">
-            <a href="/download/{{filenameOnDisk}}" target="_blank">
+            <a href="{{encodedDownloadURI}}" target="_blank">
               <button type="button" class="btn btn-lg btn-primary pull-left">Download File</button>
             </a>
             <button type="button" class="btn btn-lg btn-danger pull-right" data-dismiss="modal">Close</button>
