Add color to alert bell

--- a/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
+++ b/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
@@ -9,7 +9,7 @@
         <span class="glyphicon glyphicon-paperclip"></span>
       {{/if}}
       {{#if unread}}
-        <span class="glyphicon glyphicon-bell"></span>
+        <span class="glyphicon glyphicon-bell" style="color: red;"></span>
       {{/if}}
     </td>
     <td>{{title}}</td>
