Hide ticket submission buttons from non-queue members.

--- a/client/views/queue/queue.html
+++ b/client/views/queue/queue.html
@@ -23,10 +23,14 @@
           <strong>You are not currently connected. Any changes you make may not be saved.</strong>
         </div>
       {{/unless}}
-      <div class="pull-left">
-        <button class="btn btn-primary" type="button" data-action="showNewTicketModal">Add New Ticket</button>
-        <button class="btn btn-success" type="button" data-action="openQuickAdd">Quick Add Ticket</button>
-      </div>
+      {{#if queueMember}}
+        <div class="pull-left">
+          <button class="btn btn-primary" type="button" data-action="showNewTicketModal">Add New Ticket</button>
+          <button class="btn btn-success" type="button" data-action="openQuickAdd">Quick Add Ticket</button>
+        </div>
+      {{else}}
+        <a href="https://resources.as.uky.edu/hive-forms"><button class="btn btn-primary">Submit a Ticket</button></a>
+      {{/if}}
       <div class="pull-right hidden-xs">
         {{#each members}}
           {{>userPortrait userId=this class="queue-user-image" fadeIfOffline=true}}
