Add username in header info of ticket detail.

--- a/client/components/ticketComponents/ticketComponents.html
+++ b/client/components/ticketComponents/ticketComponents.html
@@ -246,7 +246,7 @@
       <div class="pull-left">
         <div class="user-panel-portrait">{{> userPortrait userId=author._id}}</div>
         <div class="user-panel-info">
-          {{author.displayName}}<br>
+          {{author.displayName}} ({{author.username}})<br>
           <a href="mailto:{{author.mail}}">{{author.mail}}</a><br>
           {{author.department}}<br>
           {{author.physicalDeliveryOfficeName}}<br>
