--- a/client/views/stats/ticketStats/ticketStats.html
+++ b/client/views/stats/ticketStats/ticketStats.html
@@ -15,10 +15,19 @@
     </div>
   {{/unless}}
   <div class="row">
-    <div id="tickets-by-day">
+    <div class="col-md-8">
+      <div id="tickets-by-day">
+      </div>
+      <div id="closed-by-day">
+      </div>
+      <div id="volume-chart">
+      </div>
     </div>
-    <div id="closed-by-day">
+    <div class="col-md-4">
+      <div id="tickets-by-queue">
+      </div>
+      <div id="tickets-by-submitter-department">
+      </div>
     </div>
-    <div id="volume-chart">
-    </div> </div>
+  </div>
 </template>
