--- a/client/views/stats/ticketStats/ticketStats.html
+++ b/client/views/stats/ticketStats/ticketStats.html
@@ -30,4 +30,14 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-4">
+      <div id="tickets-closed-by-user">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div id="time-to-close-by-user">
+      </div>
+    </div>
+  </div>
 </template>
