--- a/client/views/stats/ticketStats/ticketStats.html
+++ b/client/views/stats/ticketStats/ticketStats.html
@@ -7,7 +7,7 @@
   {{/unless}}
   <div class="row">
     <div class="col-md-12">
-      <strong>Tickets Closed/Submitted Over Time</strong>
+      {{#if ready}}<strong>Tickets Closed/Submitted Over Time</strong>{{/if}}
       <div id="tickets-by-day">
       </div>
       <div id="closed-by-day">
@@ -18,12 +18,12 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <strong>Tickets Submitted By Queue</strong>
+      {{#if ready}}<strong>Tickets Submitted By Queue</strong>{{/if}}
       <div id="tickets-by-queue">
       </div>
     </div>
     <div class="col-md-6">
-      <strong>Tickets Submitted By Department</strong>
+      {{#if ready}}<strong>Tickets Submitted By Department</strong>{{/if}}
       <div id="tickets-by-submitter-department">
       </div>
     </div>
@@ -31,12 +31,12 @@
   <div class="row">
     <div class="col-md-6">
       <div id="tickets-closed-by-user">
-        <strong>Tickets Closed By User</strong>
+        {{#if ready}}<strong>Tickets Closed By User</strong>{{/if}}
       </div>
     </div>
     <div class="col-md-6">
       <div id="time-to-close-by-user">
-        <strong>Average Time to Close by User</strong>
+        {{#if ready}}<strong>Average Time to Close by User</strong>{{/if}}
       </div>
     </div>
   </div>
