--- a/client/views/stats/ticketStats/ticketStats.html
+++ b/client/views/stats/ticketStats/ticketStats.html
@@ -40,4 +40,17 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <table id="data-table" class="table table-condensed table-striped">
+        <thead>
+          <tr>
+            <th>Username</th>
+            <th>Avg. Time to Close</th>
+            <th>Number Closed</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+  </div>
 </template>
