Add link to stats page in nav bar.

--- a/client/layout/nav/navbar/navbar.html
+++ b/client/layout/nav/navbar/navbar.html
@@ -27,6 +27,14 @@
       </ul>
       </li>
     </ul>
+
+    <div class="nav navbar-nav navbar-right">
+      <a class="btn btn-primary navbar-btn" href="/stats">
+        <i class="glyphicon glyphicon-stats"></i>
+        <span class="visible-xs">Stats</span>
+      </a>
+    </div>
+
   </div><!-- /.navbar-collapse -->
   {{/if}}
 </div>
