--- a/client/views/stats/ticketStats/ticketStats.html
+++ b/client/views/stats/ticketStats/ticketStats.html
@@ -7,6 +7,12 @@
   {{/unless}}
   <div class="row">
     <div class="col-md-12">
+      <div id="data-count">
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
       {{#if ready}}<strong>Tickets Closed/Submitted Over Time</strong>{{/if}}
       <div id="tickets-by-day">
       </div>
@@ -16,15 +22,23 @@
       </div>
     </div>
   </div>
+  {{#if ready}}
+    <div class="row">
+      <div class="col-md-6">
+        <strong>Tickets Submitted By Queue</strong>
+      </div>
+      <div class="col-md-6">
+        <strong>Tickets Submitted By Department</strong>
+      </div>
+    </div>
+  {{/if}}
   <div class="row">
     <div class="col-md-6">
-      {{#if ready}}<strong>Tickets Submitted By Queue</strong>{{/if}}
-      <div id="tickets-by-queue">
+      <div id="tickets-by-queue" style="width: 100%;">
       </div>
     </div>
     <div class="col-md-6">
-      {{#if ready}}<strong>Tickets Submitted By Department</strong>{{/if}}
-      <div id="tickets-by-submitter-department">
+      <div id="tickets-by-submitter-department" style="width: 100%;">
       </div>
     </div>
   </div>
