--- a/client/layout/nav/navbar/navbar.html
+++ b/client/layout/nav/navbar/navbar.html
@@ -3,12 +3,12 @@
 <div class="container-fluid">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-      <span class="sr-only">Triage</span>
+      <span class="sr-only">{{siteTitle}}</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">Triage</a>
+    <a class="navbar-brand" href="/">{{siteTitle}}</a>
   </div>
   {{#if currentUser }}
   <!-- Collect the nav links, forms, and other content for toggling -->
