Add ticket number to ticket table

--- a/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
+++ b/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
@@ -13,6 +13,9 @@
       {{/if}}
     </td>
     <td>
+      <strong>{{ticketNumber}}</strong>
+    </td>
+    <td>
       <span class="hidden-print">{{title}}</span>
       <span class="visible-print-block">
         <strong>{{title}}</strong>
