Allow non-queue members to add/remove tags, allow inline tagging and associating for non-queue members

--- a/client/components/ticketComponents/ticketComponents.html
+++ b/client/components/ticketComponents/ticketComponents.html
@@ -137,19 +137,13 @@
   <div name="tags" class="panel panel-default">
     <div class="panel-heading">Tags</div>
     <div class="panel-body">
-      {{#if queueMember}}
-        <div class="add-tag-field">
-          <span class="icon glyphicon glyphicon-plus"></span>
-          {{>inputAutocomplete settings=tagSettings name="addTag" placeholder="Add a tag"}}
-        </div> 
-        {{#each tags}}
-          {{> ticketTag}}
-        {{/each}}
-        {{else}}
-        {{#each tags}}
-          {{this}}
-        {{/each}}
-      {{/if}}
+      <div class="add-tag-field">
+        <span class="icon glyphicon glyphicon-plus"></span>
+        {{>inputAutocomplete settings=tagSettings name="addTag" placeholder="Add a tag"}}
+      </div>
+      {{#each tags}}
+        {{> ticketTag}}
+      {{/each}}
     </div>
   </div>
 
@@ -188,11 +182,7 @@
 <template name="ticketNoteInput">
   <div class="row ticket-note-input-area">
     <div class="col-xs-12 col-md-10 col-md-offset-2">
-      {{#if queueMember}}
-        {{# textareaAutocomplete name="newNoteAdmin" class='form-control' placeholder="Add a new note..." settings=tokenSettings data-ticket=_id }}{{/textareaAutocomplete}}
-        {{else}}
-        <textarea class="form-control" placeholder="Add a new note..." name="newNote" data-ticket="{{_id}}"></textarea>
-      {{/if}}
+      {{# textareaAutocomplete name="newNote" class='form-control' placeholder="Add a new note..." settings=tokenSettings data-ticket=_id }}{{/textareaAutocomplete}}
     </div>
   </div>
   <div class="row">
