Add lastUpdated field on tickets.

--- a/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
+++ b/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
@@ -57,6 +57,7 @@
         {{status}}
       {{/if}}
     </td>
+    <td class="hidden-xs">{{>timeFromNow date=lastUpdated}}</td>
     <td class="hidden-xs">{{>timeFromNow date=submittedTimestamp}}</td>
   </tr>
 </template>
