--- a/client/views/queue/views/ticketTable/ticketTable.html
+++ b/client/views/queue/views/ticketTable/ticketTable.html
@@ -21,7 +21,8 @@
             <th class="col-md-2">Requester</th>
             <th class="col-md-2">Associated</th>
             <th class="col-md-1">Status</th>
-            <th class="col-md-2 hidden-xs">Submitted</th>
+            <th class="col-md-1 hidden-xs">Updated</th>
+            <th class="col-md-1 hidden-xs">Submitted</th>
           </tr>
         </thead>
         <tbody>
