If ticket hasn't been updated since submission, leave Updated column blank.

--- a/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
+++ b/client/views/queue/views/ticketTable/ticketRow/ticketRow.html
@@ -57,7 +57,11 @@
         {{status}}
       {{/if}}
     </td>
-    <td class="hidden-xs">{{>timeFromNow date=lastUpdated}}</td>
+    <td class="hidden-xs">
+      {{#if hasBeenUpdated}}
+        {{>timeFromNow date=lastUpdated}}
+      {{/if}}
+    </td>
     <td class="hidden-xs">{{>timeFromNow date=submittedTimestamp}}</td>
   </tr>
 </template>
